--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,7 @@
+<!DOCTYPE html>
 <html lang="en">
+<head>
+    <title>Test Jenkin</title>
 <style>
     .container {
         margin: 40px auto;
@@ -36,10 +39,7 @@
     #container-edit hr {
         margin: 25px 0;
     }
-    #container-edit input {
-        width: 195px;
-        font-size: 15px;
-    }
+   
 </style>
 <script>
     (async function init() {
@@ -96,6 +96,7 @@
         contEdit.style.display = 'block';
     }
 </script>
+</head>
 <body>
     <div class='container' id='container'>
         <h1>User profile</h1>
