--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,9 @@
     #container-edit hr {
         margin: 25px 0;
     }
-   
+    #dev {
+        margin: 0;
+    }
 </style>
 <script>
     (async function init() {
